// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImportGroupSettingParser should parse a complex keyword pattern 1`] = `
KeywordImportGroup {
  "imports": Array [],
  "keyword": 2,
  "order": "desc",
}
`;

exports[`ImportGroupSettingParser should parse a complex regex 1`] = `
RegexImportGroup {
  "imports": Array [],
  "order": "asc",
  "regex": "/(@angular|react)/core/(.*)/",
}
`;

exports[`ImportGroupSettingParser should parse a complex regex pattern 1`] = `
RegexImportGroup {
  "imports": Array [],
  "order": "desc",
  "regex": "/foobar/",
}
`;

exports[`ImportGroupSettingParser should parse a regex with "@" 1`] = `
RegexImportGroup {
  "imports": Array [],
  "order": "asc",
  "regex": "/@angular/",
}
`;

exports[`ImportGroupSettingParser should parse a regex with "or" 1`] = `
RegexImportGroup {
  "imports": Array [],
  "order": "asc",
  "regex": "/angular|react/",
}
`;

exports[`ImportGroupSettingParser should parse a simple keyword 1`] = `
KeywordImportGroup {
  "imports": Array [],
  "keyword": 2,
  "order": "asc",
}
`;

exports[`ImportGroupSettingParser should parse a simple regex 1`] = `
RegexImportGroup {
  "imports": Array [],
  "order": "asc",
  "regex": "/foobar/",
}
`;
